# vba_sphinx

./: .gitignore  README.md  setup.cfg  test.rst  vba_codereader.toml  vba_parser.toml  xl_codereader.toml
data/: exported_vba.txt  vba_codereader.toml  vba_parser.toml
download/: vba_codereader.toml
mydocs/: VBA_Syntax.md  merken_und_todo.md  vbgramm.md
src/vbasphinx/: vba_domain.py  vba_reader.py
src/vbasphinx/vba_parser/: VBA_Syntax.md  vba_grammar.py  vba_parser.py  vba_parser_summary.py  vba_tree_export.py  vbgramm.md
src/vbasphinx/vba_utils/: config_reader_toml.py  vba_logging.py
src/vbasphinx/xl_reader/: xl_codereader.py
tests/: all.py  build_sphinx_doku.py  test.py  vba_vorgabe.json
tests/data/VBA2Parse/: Ersatz_Auftragsverfolgung.txt  Ersatz_Auftragsverfolgung_Makros.txt  Ersatz_Etiketten Win10.txt  Ersatz_Etiketten.txt  Etiketten Win10.txt  KE_Tools Win10 V2.txt  KE_Tools.txt  Montage_Makros.txt  Testmappe.txt
tests/data/parsed/: DatenbankDoku.rst  Ersatz_Auftragsverfolgung.rst  Ersatz_Auftragsverfolgung_Makros.rst  Ersatz_Etiketten Win10.rst  Ersatz_Etiketten.rst  Etiketten Win10.rst  Etiketten.rst  KE_Tools Win10 V2.rst  KE_Tools Win10.rst  Präferenzkalkulation Makros Win10.rst  Test.rst
tests/integration/: all.py  build_sphinx_doku.py  test_parse_files.py  vba_parser_summary.py
tests/integration/data/: Testmappe.xlsm
tests/integration/sphinx/: Ersatz_Etiketten Win10.rst  conf.py  index.rst  module_ersatz.rst  xxwegvba.py
tests/sphinx/: Testmappe.rst  conf.py
tests/unit/: test_parser.py  test_rst_export.py
(+16 files in other folders)
