[metadata]
name = vbasphinx
version = 0.2.0
author = Klaus Etscheidt
author_email = klaus.etscheidt@gmail.com
description = Python tools to document Visual Basic Software with Sphinx
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KlausEtscheidt/vba_sphinx
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: Microsoft :: Windows
install_requires =
    pywin32
    tomlkit
    pyparsing
    Sphinx
[options]
package_dir =
    = src
packages = vbasphinx, vbasphinx.vba_utils, vbasphinx.vba_parser
python_requires = >=3.6

[options.packages.find]
where = src